Expand multi-language TSA SDK support